# LogDevice

cheaplab/: logdevice.service  logdevice.sh  logdevicedctl  module.preinst  package.preinst
cloud/aws/: awld
logdevice/: CMakeLists.txt
logdevice/CMake/: build-config.cmake  build-fbthrift.cmake
logdevice/examples/: CMakeLists.txt  makelogs.cpp
logdevice/include/: Client.h
logdevice/plugins/prometheus/src/: PrometheusStatsPublisher.cpp
logdevice/test/ldbench/: CMakeLists.txt
logdevice/test/ldbench/worker/: BenchStats.cpp  CMakeLists.txt
